Prevent portfolio hero from squishing nav menu on phone

--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -1,6 +1,5 @@
 .heroBackground {
     position: absolute;
-    top: 80px;
     width: 100vw;
     height: 944px;
     background-image: url('/images/bkgd_portfolio_hero.png');
